이메일로도 사용자 조회할 수 있도록 API 추가 (#18)
* add: 서비스 데이터는 public이므로 인증 없이 사용자 조회하도록 반영

* rename: 함수명 변경

* up: token 기반으로 사용자 조회하는 api 복구

* rename: 명확하게 이름 변경

* up: 명확하게 변수명 변경

* up: 중복 코드 함수화

* up: 문서화

* up: 누락된 http status 추가
