# internal/app/routers/router.go
@@ -16,7 +16,8 @@ func Use(api *gin.RouterGroup) {
 		users.POST("/signup", handlers.UserSignup)
 		users.POST("/login", handlers.UserLogin)
 		users.GET("/login/kakao", handlers.UserKakaoLoginCallBack)
-		users.GET("", middlewares.TokenAuthMiddleware(), handlers.UserInfo)
+		users.GET("", middlewares.TokenAuthMiddleware(), handlers.UserInfoTokenQuey)
+		users.GET(":userEmail", handlers.UserInfoEmailQuey)
 		users.POST("/logout", middlewares.TokenAuthMiddleware(), handlers.UserLogout)
 		users.GET("/token/valid", middlewares.TokenAuthMiddleware(), handlers.UserTokenValid)
 		users.POST("/token/refresh", handlers.UserTokenRefresh)
